--- a/Forecast_skill.Rmd
+++ b/Forecast_skill.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Forecast skill"
-author: "Shaun Harrigan"
 html_document: default
+author: "Shaun Harrigan"
+title: "Forecast skill"
 ---
 
 #### Worked Example 12.1
@@ -10,16 +10,14 @@ html_document: default
 
 In this example we will be calculating the *skill* of the Ensemble Streamflow Prediction (ESP) forecast method
 for the Lambourn catchment at Shaw gauging station in southern England (catchment area of 234.1 km^2^). 
-The dataset consists of monthly-averaged river discharge observations in the second column and corresponding ESP forecasts initialised on 1^st^ January for a one month lead time for 51 ensemble members, in columns 3 to 53. The dataset contains 50 observation-forecast pairs across the 1965 to 2014 hindcast periods as shown in column 1. The units for both observations and forecasts are m^3^s^-1^.
-More detail on how these data were generated can be found in Harrigan et al. (2018).
+The dataset consists of monthly-averaged river discharge observations in the second column and corresponding ESP forecasts initialised on 1^st^ January each year for a one month lead time for 51 ensemble members, in columns 3 to 53. The dataset contains 50 observation-forecast pairs across the 1965 to 2014 hindcast periods as shown in column 1. The units for both observations and forecasts are m^3^s^-1^. More detail on how these data were generated can be found in Harrigan et al. (2018).
 
-First we load the dataset and define the observations and forecast variables we will use in later calculations:
+First we load the dataset and define the observations and forecast variables:
 
 ```{r}
 # Load the data 
 inFolder <- "/Users/shaunharrigan/Dropbox/Projects/Drought_book/Worked_example/Data/"
 fcst_dataset <- read.csv(paste0(inFolder, "forecast_data.csv"), header = TRUE) 
-dim(fcst_dataset) # Check dimentions of dataset
 
 # Subset observations vector 
 obs <- fcst_dataset$Observed_flow
@@ -28,14 +26,14 @@ obs <- fcst_dataset$Observed_flow
 fcst_ens <- fcst_dataset[ ,3:53]
 
 # Plot observed and ensemble forecast
-boxplot(t(fcst_ens), xlab = "Hindcast year", ylab = "Flow (cumecs)", xaxt = "n")
+boxplot(t(fcst_ens), xlab = "Hindcast year", ylab = "Flow (cumecs)", xaxt = "n", range = 0)
 axis(side = 1, at = 1:50, labels = fcst_dataset$Year)
 lines(obs)
 ```
 
-## Calculate low flow index from observations 
+## Calculate long-term low flow threshold from observations 
 
-In this example we want to evaluate the ability of the ESP forecast to predict the probability of river discharge to below the long-term Q90 low flow threshold. We need to first calculate the long-term Q90 threshold from observations using the `quantile()` function:
+In this example we want to evaluate the ability of the ESP forecast to predict the probability of river discharge events below the long-term Q90 low flow threshold. We need to first calculate the long-term Q90 threshold from observations using the `quantile()` function:
 
 ```{r}
 obs_Q90_threshold <- quantile(obs, probs = 0.1)
@@ -50,7 +48,8 @@ $$BS=\frac{1}{n}\sum_{k=1}^n(fcst_{k}-obs_{k})^2$$
 where the index *k* denotes numbering of trhe *n* forecast-event pairs. In our example *n* = 50. Perfect forecasts will have *BS* = 0. The steps to calculate the BS are as follows:
 
 * Create vector of binary observations *obs* with 1 when an an event is observed (i.e. below the long-term observed Q90 threshold for that year) and 0 if not
-* Create the vector *fcst~k~* of forecast probilities (i.e. number of ensemlbe members below the long-term observed Q90 threhold for that year, expressed as a probability [0,1])
+* Create the vector *fcst* of forecast probabilities (i.e. number of ensemble members below the long-term observed Q90 threhold for that year, expressed as a probability [0,1])
+* In order to calculate the skill, we need a *benchmark* forecast against which to compare our ESP forecast A common benchmark forecast is the long-term climatology. In any given year the probability of the flow being below the Q90 threshold is simply 0.1 (i.e. the climatological probability). Therefore create the vector *bench* of climatological probabilities for each forecast (i.e. 0.1)
 * The Brier score is then calculated using the `brier()` function from the `verification` R package
 
 ```{r message=FALSE}
@@ -72,8 +71,8 @@ BS_esp <- as.numeric(BS_esp)
 BS_esp
 
 # Calculate Brier Score for climatology benchmark forecast
-BS_bench <- verification::brier(obs = obs_vec, pred = clim_vec, bins = FALSE)
-BS_bench <- as.numeric(BS_bench$bs)
+BS_bench <- verification::brier(obs = obs_vec, pred = clim_vec, bins = FALSE)["bs"]
+BS_bench <- as.numeric(BS_bench)
 #names(BS_bench) <- "BS_bench"
 BS_bench
 ```
@@ -81,7 +80,7 @@ BS_bench
 
 ## Calculate the Brier Skill Score (BSS)
 
-We can compute the **Brier Skill Score** of the ESP forecast for predicting Q90 low flow events compared to a simple climatology benchmark forecast using the the genral skill score formula introduced in Section 12.3.8, with the following variables:
+We can compute the **Brier Skill Score** of the ESP forecast for predicting Q90 low flow events compared to a simple climatology benchmark forecast using the the generic skill score formula introduced in Section 12.3.8, with the following variables:
 
 * *A~fc~* = BS_esp
 * *A~bench~* = BS_bench
@@ -94,27 +93,7 @@ BSS
 ```
 
 
-### old
-
-```{r}
-
-#ifelse(obs < Q90_threshold, 1, 0)
 
 
-#fcst_ens_mean <- apply(fcst_ens, 1, mean)
-#ifelse(fcst_ens_mean < Q90_threshold, 1, 0)
-
-
-#hits <- sum(ifelse(obs < Q90_threshold & fcst_ens_mean < Q90_threshold, 1, 0))
-#misses <- sum(ifelse(obs < Q90_threshold & fcst_ens_mean >= Q90_threshold, 1, 0))
-
-#hit_rate <- hits / (hits + misses)
-
-
-
-
-```
-
-
-## End
+#### End ------
 
